fixed bug: unvisible head-toggle div, removed text capitalize from movie details in modal

--- a/src/scss/visibility.scss
+++ b/src/scss/visibility.scss
@@ -1,21 +1,22 @@
-.visibility{
+.visibility {
   visibility: visible;
   opacity: 1;
   position: relative;
   display: block;
 }
-.unVisibility{
+
+.unVisibility {
   display: none;
 }
 
-.modal-open{
+.modal-open {
   overflow: hidden;
 }
-.basicLightbox__placeholder{
+
+.basicLightbox__placeholder {
   width: 100%;
   height: 100%;
-
-  transition: opacity .4s ease;
+  transition: opacity 0.4s ease;
 }
 
 .toasty-wrap {
@@ -25,6 +26,7 @@
   transition: 0.3s;
   transform: translateX(100%);
 }
-.show-toasty{
+
+.show-toasty {
   transform: translateX(0);
 }
